# sql_chatbot

./: .env.example  api.py  app.py  chainlit.md  pyproject.toml  requirements.txt  server.py  test_db.py
.chainlit/: config.toml
docs/: PRD.md
sql_analyzer/: agent_factory.py  config.py  sql_chatbot.py  sql_db_factory.py
